@@ -698,12 +698,6 @@
 	SET_DIRTY_RECURSIVELY();
 }
 
--(void)moveBy:(CGPoint)delta
-{
-	[super moveBy:delta];
-	SET_DIRTY_RECURSIVELY();
-}
-
 -(void)setRotation:(float)rot
 {
 	[super setRotation:rot];
