@@ -19,9 +19,11 @@ Class restartAction(void);
 static int sceneIdx=-1;
 static NSString *transitions[] = {
 
+	@"ActionMoveStacked",
+	@"ActionMoveJumpStacked",
+	
 	@"ActionManual",
 	@"ActionMove",
-	@"ActionMoveStacked",
 	@"ActionRotate",
 	@"ActionScale",
 	@"ActionSkew",
@@ -54,6 +56,9 @@ static NSString *transitions[] = {
 	@"ActionFollow",
 	@"ActionProperty",
 	@"ActionTargeted",
+	@"ActionMoveStacked",
+	@"ActionMoveJumpStacked",	
+	
     @"PauseResumeActions",
 
 	@"Issue1305",
@@ -283,109 +288,6 @@ Class restartAction()
 {
 	return @"MoveTo / MoveBy";
 }
-@end
-
-@implementation ActionMoveStacked
--(id) init
-{
-	if( (self=[super init]) ) {
-		
-		[self centerSprites:0];
-
-#ifdef __CC_PLATFORM_IOS
-		self.touchEnabled = YES;
-#elif defined(__CC_PLATFORM_MAC)
-		self.mouseEnabled = YES;
-#endif
-		
-		CGSize s = [[CCDirector sharedDirector] winSize];
-		[self addNewSpriteWithCoords:ccp(s.width/2, s.height/2)];
-	}
-	return self;
-}
-
--(void) addNewSpriteWithCoords:(CGPoint)p
-{
-	int idx = CCRANDOM_0_1() * 1400 / 100;
-	int x = (idx%5) * 85;
-	int y = (idx/5) * 121;
-
-
-	CCSprite *sprite = [CCSprite spriteWithFile:@"grossini_dance_atlas.png" rect:CGRectMake(x,y,85,121)];
-
-	sprite.position = p;
-	[self addChild:sprite];
-
-	[sprite runAction:
-	 [CCRepeatForever actionWithAction:
-	  [CCSequence actions:
-	   [CCMoveBy actionWithDuration:6 position:ccp(200, 0)],
-	   [CCMoveBy actionWithDuration:6 position:ccp(-200, 0)],
-	   nil]]];
-
-	[sprite runAction:
-	 [CCRepeatForever actionWithAction:
-	  [CCSequence actions:
-	   [CCDelayTime actionWithDuration:1],
-	   [CCMoveBy actionWithDuration:2 position:ccp(0, 100)],
-	   [CCDelayTime actionWithDuration:1],
-	   [CCMoveBy actionWithDuration:2 position:ccp(0, -100)],
-	   nil]]];
-
-	sprite = [CCSprite spriteWithFile:@"grossinis_sister1.png"];
-
-	sprite.position = p;
-	[self addChild:sprite];
-
-	[sprite runAction:
-	 [CCRepeatForever actionWithAction:
-	  [CCSequence actions:
-	   [CCMoveTo actionWithDuration:6 position:ccpSub(p, ccp(200, 0))],
-	   [CCMoveTo actionWithDuration:6 position:p],
-	   nil]]];
-
-	[sprite runAction:
-	 [CCRepeatForever actionWithAction:
-	  [CCSequence actions:
-	   [CCDelayTime actionWithDuration:1],
-	   [CCMoveBy actionWithDuration:2 position:ccp(0, -100)],
-	   [CCDelayTime actionWithDuration:1],
-	   [CCMoveBy actionWithDuration:2 position:ccp(0, 100)],
-	   nil]]];
-}
-
-#ifdef __CC_PLATFORM_IOS
-- (void)ccTouchesEnded:(NSSet *)touches withEvent:(UIEvent *)event
-{
-	for( UITouch *touch in touches ) {
-		CGPoint location = [touch locationInView: [touch view]];
-		
-		location = [[CCDirector sharedDirector] convertToGL: location];
-		
-		[self addNewSpriteWithCoords: location];
-	}
-}
-#elif defined(__CC_PLATFORM_MAC)
--(BOOL) ccMouseUp:(NSEvent *)event
-{
-	CGPoint location = [[CCDirector sharedDirector] convertEventToGL:event];
-	[self addNewSpriteWithCoords: location];
-	
-	return YES;
-	
-}
-#endif
-
--(NSString *) title
-{
-	return @"Stacked CCMoveBy/To actions";
-}
-
--(NSString *) subtitle
-{
-	return @"Tap screen";
-}
-
 @end
 
 @implementation ActionRotate
@@ -1558,6 +1460,195 @@ return @"Skew Comparison";
 {
 	return @"Action that runs on another target. Useful for sequences";
 }
+@end
+
+#pragma mark - ActionMoveStacked
+
+@implementation ActionMoveStacked
+-(id) init
+{
+	if( (self=[super init]) ) {
+		
+		[self centerSprites:0];
+		
+#ifdef __CC_PLATFORM_IOS
+		self.touchEnabled = YES;
+#elif defined(__CC_PLATFORM_MAC)
+		self.mouseEnabled = YES;
+#endif
+		
+		CGSize s = [[CCDirector sharedDirector] winSize];
+		[self addNewSpriteWithCoords:ccp(s.width/2, s.height/2)];
+	}
+	return self;
+}
+
+-(void) addNewSpriteWithCoords:(CGPoint)p
+{
+	int idx = CCRANDOM_0_1() * 1400 / 100;
+	int x = (idx%5) * 85;
+	int y = (idx/5) * 121;
+	
+	
+	CCSprite *sprite = [CCSprite spriteWithFile:@"grossini_dance_atlas.png" rect:CGRectMake(x,y,85,121)];
+	
+	sprite.position = p;
+	[self addChild:sprite];
+	
+	//	[sprite runAction: [CCMoveBy actionWithDuration:2 position:ccp(300,0)]];
+	//	[sprite runAction: [CCMoveBy actionWithDuration:2 position:ccp(0,300)]];
+	
+	[sprite runAction:
+	 [CCRepeatForever actionWithAction:
+	  [CCSequence actions:
+	   [CCMoveBy actionWithDuration:6 position:ccp(200, 0)],
+	   [CCMoveBy actionWithDuration:6 position:ccp(-200, 0)],
+	   nil]]];
+	
+	[sprite runAction:
+	 [CCRepeatForever actionWithAction:
+	  [CCSequence actions:
+	   [CCDelayTime actionWithDuration:1],
+	   [CCMoveBy actionWithDuration:2 position:ccp(0, 100)],
+	   [CCDelayTime actionWithDuration:1],
+	   [CCMoveBy actionWithDuration:2 position:ccp(0, -100)],
+	   nil]]];
+	
+	sprite = [CCSprite spriteWithFile:@"grossinis_sister1.png"];
+	
+	sprite.position = p;
+	[self addChild:sprite];
+	
+	[sprite runAction:
+	 [CCRepeatForever actionWithAction:
+	  [CCSequence actions:
+	   [CCMoveTo actionWithDuration:6 position:ccpSub(p, ccp(200, 0))],
+	   [CCMoveTo actionWithDuration:6 position:p],
+	   nil]]];
+	
+	[sprite runAction:
+	 [CCRepeatForever actionWithAction:
+	  [CCSequence actions:
+	   [CCDelayTime actionWithDuration:1],
+	   [CCMoveBy actionWithDuration:2 position:ccp(0, -100)],
+	   [CCDelayTime actionWithDuration:1],
+	   [CCMoveBy actionWithDuration:2 position:ccp(0, 100)],
+	   nil]]];
+}
+
+#ifdef __CC_PLATFORM_IOS
+- (void)ccTouchesEnded:(NSSet *)touches withEvent:(UIEvent *)event
+{
+	for( UITouch *touch in touches ) {
+		CGPoint location = [touch locationInView: [touch view]];
+		
+		location = [[CCDirector sharedDirector] convertToGL: location];
+		
+		[self addNewSpriteWithCoords: location];
+	}
+}
+#elif defined(__CC_PLATFORM_MAC)
+-(BOOL) ccMouseUp:(NSEvent *)event
+{
+	CGPoint location = [[CCDirector sharedDirector] convertEventToGL:event];
+	[self addNewSpriteWithCoords: location];
+	
+	return YES;
+	
+}
+#endif
+
+-(NSString *) title
+{
+	return @"Stacked CCMoveBy/To actions";
+}
+
+-(NSString *) subtitle
+{
+	return @"Tap screen";
+}
+@end
+
+#pragma mark - ActionMoveJumpStacked
+
+@implementation ActionMoveJumpStacked
+-(id) init
+{
+	if( (self=[super init]) ) {
+		
+		[self centerSprites:0];
+		
+#ifdef __CC_PLATFORM_IOS
+		self.touchEnabled = YES;
+#elif defined(__CC_PLATFORM_MAC)
+		self.mouseEnabled = YES;
+#endif
+		
+		CGSize s = [[CCDirector sharedDirector] winSize];
+		[self addNewSpriteWithCoords:ccp(s.width/2, s.height/2)];
+	}
+	return self;
+}
+
+-(void) addNewSpriteWithCoords:(CGPoint)p
+{
+	int idx = CCRANDOM_0_1() * 1400 / 100;
+	int x = (idx%5) * 85;
+	int y = (idx/5) * 121;
+	
+	
+	CCSprite *sprite = [CCSprite spriteWithFile:@"grossini_dance_atlas.png" rect:CGRectMake(x,y,85,121)];
+	
+	sprite.position = p;
+	[self addChild:sprite];
+	
+	[sprite runAction:
+	 [CCRepeatForever actionWithAction:
+	  [CCSequence actions:
+	   [CCMoveBy actionWithDuration:2 position:ccp(300,0)],
+	   [CCMoveBy actionWithDuration:2 position:ccp(0,300)],
+	   [CCMoveBy actionWithDuration:2 position:ccp(-300,0)],
+	   [CCMoveBy actionWithDuration:2 position:ccp(0,-300)],
+	   nil]]];
+
+	[sprite runAction:
+	 [CCRepeatForever actionWithAction:
+	  [CCJumpBy actionWithDuration:2 position:ccp(0,0) height:100 jumps:5]]
+	 ];
+}
+
+#ifdef __CC_PLATFORM_IOS
+- (void)ccTouchesEnded:(NSSet *)touches withEvent:(UIEvent *)event
+{
+	for( UITouch *touch in touches ) {
+		CGPoint location = [touch locationInView: [touch view]];
+		
+		location = [[CCDirector sharedDirector] convertToGL: location];
+		
+		[self addNewSpriteWithCoords: location];
+	}
+}
+#elif defined(__CC_PLATFORM_MAC)
+-(BOOL) ccMouseUp:(NSEvent *)event
+{
+	CGPoint location = [[CCDirector sharedDirector] convertEventToGL:event];
+	[self addNewSpriteWithCoords: location];
+	
+	return YES;
+	
+}
+#endif
+
+-(NSString *) title
+{
+	return @"Stacked Move + Jump actions";
+}
+
+-(NSString *) subtitle
+{
+	return @"Tap screen";
+}
+
 @end
 
 #pragma mark - PauseResumeActions
